Plus1 WapStart Android SDK 2.2.3, 2013-08-19
- Update debug settings in Bart project to default

Plus1 WapStart Android SDK 2.2.2, 2013-08-08
- Fixed WebView's crash issue for hardwareAccelerated=true case

Plus1 WapStart Android SDK 2.2.1, 2013-05-30
- Fixed onPause NPE crash when using disableAutoDetectLocation() method

Plus1 WapStart Android SDK 2.2.0, 2013-05-23
----------------------
- New banner shield in WebView layout
- Added new methods, some interface methods marked as deprecated
- New listeners for Plus1BannerView (OnShow, OnHide, OnCloseButton, OnExpand,
  OnCollapse, OnImpression, OnTrackClick listeners)
- SDK listener logic fixes
- Smart location provider logic, fixes
- Send virtual pixels (dp) for container metrics
- Added conversion submodule to SDK
- Added workaround due to Eclipse layout viewer bug
- Small bug fixes

Plus1 WapStart Android SDK 2.1.4, 2012-12-25
----------------------
- Fix bug for case when timers are paused and activity was destroyed

Plus1 WapStart Android SDK 2.1.3, 2012-11-08
----------------------
- Resolve WebView collisions issue (see setDisabledWebViewCorePausing() method)
- Added setRemoveBannersOnPause() useful method
- Improoved banner animation process

Plus1 WapStart Android SDK 2.1.2, 2012-09-24
----------------------
- Fixed critical typo in ad animator
- More safely calls of pauseTimers/resumeTimers methods (WebView)

Plus1 WapStart Android SDK 2.1.1, 2012-08-29
----------------------
- Fixed NPE in post-action body of banner animation context
- Fixed code using WebView pauseTimers/resumeTimers methods
- Release audio player when pause BartActivity
- Fix typo in Cookie header

Plus1 WapStart Android SDK 2.1.0, 2012-08-06
----------------------
- Added html5 play video feature
- Back key support for expanded layer
- Destroy WebView in UI thread after fadeout animation

Plus1 WapStart Android SDK 2.0.1, 2012-07-19
----------------------
- Send additional x-original-user-agent header
